좌석 예약하기 컨트롤러 뷰페이지 작성

--- a/src/main/resources/templates/fragment/navbar.html
+++ b/src/main/resources/templates/fragment/navbar.html
@@ -21,10 +21,13 @@
                 <a class="nav-link" href="/#map">찾아오기</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="/reserve">예약하기</a>
+                <a class="nav-link" href="/reserve">좌석선택</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="/reserve/price">결제하기</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/reserve/pre_reserve">좌석예약</a>
             </li>
         </ul>
     </div>
